<resources>
    <string name="app_name">Places</string>

    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="dont_have_account">Don\'t have an account</string>
    <string name="all_fav_places">All favorite places in one app</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="add_to_fav">Add to favorite</string>
    <string name="place_preview">Place Preview</string>
    <string name="place_description_text">Description about this wonderful place</string>
</resources>
