<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/eiffel_tower">

    <TextView
        android:id="@+id/login_app_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
        android:textSize="@dimen/app_name_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/login_all_fav_places"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_fav_places"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/white"
        android:layout_margin="@dimen/dp8"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/white"
        android:layout_marginTop="@dimen/dp8"
        android:layout_marginRight="@dimen/dp8"
        android:layout_marginLeft="@dimen/dp8"
        app:layout_constraintTop_toBottomOf="@+id/email_input_layout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_forgot_password"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@android:color/white"
        android:layout_marginRight="@dimen/dp8"
        app:layout_constraintTop_toBottomOf="@+id/password_input_layout"
        app:layout_constraintRight_toRightOf="parent"/>


    <Button
        android:id="@+id/login_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp16"
        android:layout_marginRight="@dimen/dp16"
        android:text="@string/login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_forgot_password" />

    <Button
        android:id="@+id/btn_dont_have_account"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_account"
        android:textColor="@android:color/white"
        android:layout_marginLeft="@dimen/dp16"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55"/>


</android.support.constraint.ConstraintLayout>